package com.pattern;

public interface FlyBehavior {

    void fly();
}
