package com.pattern;

public interface QuackBehavior {

    void quack();
}
